syntax = "proto3";

option go_package = "github.com/numaproj/numaflow-go/pkg/apis/proto/function/smapfn";

import "google/protobuf/empty.proto";
import "pkg/apis/proto/common/common.proto";


package function.smapfn;

service MapStream {
  // MapStreamFn applies a function to each request element and returns a stream.
  rpc MapStreamFn(MapStreamRequest) returns (stream MapStreamResponse);

  // IsReady is the heartbeat endpoint for gRPC.
  rpc IsReady(google.protobuf.Empty) returns (ReadyResponse);
}

/**
 * MapStreamRequest represents a request element.
 */
message MapStreamRequest {
  repeated string keys = 1;
  bytes value = 2;
  common.EventTime event_time = 3;
  common.Watermark watermark = 4;
}

/**
 * MapStreamResponse represents a response element.
 */
message MapStreamResponse {
  repeated string keys = 1;
  bytes value = 2;
  repeated string tags = 3;
}

/**
 * MapStreamResponseList represents a list of response elements.
 */
message MapStreamResponseList {
  repeated MapStreamResponseList elements = 1;
}

/**
 * ReadyResponse is the health check result.
 */
message ReadyResponse {
  bool ready = 1;
}
